# rag-with-llamaindex

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py
src/llama_teacher/: prompt.py  retriever.py
