[tool.poetry]
name = "llama_teacher"
version = "0.1.0"
description = "AI teacher assitant based on llama rag"
authors = ["MBIA NDI Marie Thérèse <mbialaura12@gmail.com>"]
readme = "README.md"
packages = [{include = "llama_teacher", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
streamlit = "^1.53.0"
llama-index = "^0.14.13"
openai = "^2.15.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
